# scriptured

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
client/: Cargo.toml  LICENSE_MIT
client/src/: lib.rs  preferences.rs
client/web/: README.md  index.html  index.js  package-lock.json  package.json  webpack.config.js
client/web/src/: BookPreferences.tsx  Form.tsx  GearSvg.tsx  NoResult.tsx  Preferences.tsx  Result.tsx  index.html  index.ts  index.tsx  utils.ts
client/web/src/__tests__/: Preferences.spec.tsx
data-bundler/: Cargo.toml
data-bundler/src/: lib.rs  main.rs
indices/src/: lib.rs
scripture-types/: Cargo.toml
scripture-types/src/: lib.rs
server/: Cargo.toml  build.rs
server/src/: main.rs
server/templates/: index.html.tera
