[package]
name = "data-bundler"
version = "0.1.0"
authors = ["neallred <neallred@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.42"
serde_derive = "1.0.103"  
flate2 = "1.0"

scripture-types = { path = "../scripture-types" }
