[package]
name = "server"
version = "0.1.0"
authors = ["neallred <neallred@gmail.com>"]
edition = "2018"
repository = "https://github.com/neallred/verily"
description = "High precision and recall scripture searchng for the web."
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.42"
serde_derive = "1.0.103"  

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "tera_templates", "serve"]
